Fixed hatches in plots

--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -367,8 +367,8 @@
     "            hc = data.hiring_costs_per_parcel.mean()\n",
     "            oc = data.outsourcing_costs_per_parcel.mean()\n",
     "\n",
-    "            ax.bar(x=[bar_x], height=[hc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white')\n",
-    "            ax.bar(x=[bar_x], height=[oc], bottom=[hc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white', hatch='\\\\')\n",
+    "            ax.bar(x=[bar_x], height=[oc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white')\n",
+    "            ax.bar(x=[bar_x], height=[hc], bottom=[oc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white', hatch='\\\\')\n",
     "\n",
     "    ax.set_xticks(ticks)\n",
     "    ax.set_xticklabels(d.RM.unique())\n",
@@ -466,8 +466,8 @@
     "            hc = data.hiring_costs_per_parcel.mean()\n",
     "            oc = data.outsourcing_costs_per_parcel.mean()\n",
     "\n",
-    "            ax.bar(x=[bar_x], height=[hc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white')\n",
-    "            ax.bar(x=[bar_x], height=[oc], bottom=[hc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white', hatch='\\\\')\n",
+    "            ax.bar(x=[bar_x], height=[oc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white')\n",
+    "            ax.bar(x=[bar_x], height=[hc], bottom=[oc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white', hatch='\\\\')\n",
     "\n",
     "    ax.set_xticks(ticks)\n",
     "    ax.set_xticklabels(d.DB.unique())\n",
@@ -500,6 +500,13 @@
    "outputs": [],
    "source": [
     "plot_db_impact(d);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Impact of the outsourcing costs"
    ]
   },
   {
@@ -543,8 +550,8 @@
     "            hcm = data.hiring_costs_per_parcel.mean()\n",
     "            ocm = data.outsourcing_costs_per_parcel.mean()\n",
     "\n",
-    "            ax.bar(x=[bar_x], height=[hcm], color=f\"C{model_idx}\", linewidth=1, edgecolor='white')\n",
-    "            ax.bar(x=[bar_x], height=[ocm], bottom=[hcm], color=f\"C{model_idx}\", linewidth=1, edgecolor='white', hatch='\\\\')\n",
+    "            ax.bar(x=[bar_x], height=[ocm], color=f\"C{model_idx}\", linewidth=1, edgecolor='white')\n",
+    "            ax.bar(x=[bar_x], height=[hcm], bottom=[ocm], color=f\"C{model_idx}\", linewidth=1, edgecolor='white', hatch='\\\\')\n",
     "\n",
     "    ax.set_xticks(ticks)\n",
     "    ax.set_xticklabels(d.OC.unique())\n",
@@ -580,6 +587,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Impact of the demand type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -603,8 +617,8 @@
     "            hc = data.hiring_costs_per_parcel.mean()\n",
     "            oc = data.outsourcing_costs_per_parcel.mean()\n",
     "\n",
-    "            ax.bar(x=[bar_x], height=[hc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white')\n",
-    "            ax.bar(x=[bar_x], height=[oc], bottom=[hc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white', hatch='\\\\')\n",
+    "            ax.bar(x=[bar_x], height=[oc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white')\n",
+    "            ax.bar(x=[bar_x], height=[hc], bottom=[oc], color=f\"C{model_idx}\", linewidth=1, edgecolor='white', hatch='\\\\')1\n",
     "\n",
     "    ax.set_xticks(ticks)\n",
     "    ax.set_xticklabels(d.DT.sort_values().unique())\n",
