removed all shift files because they don't have all types of RM and GM

--- a/run_code/shift_instance_output.ipynb
+++ b/run_code/shift_instance_output.ipynb
@@ -24845,8 +24845,8 @@
     "            instance_ = f\"../instances/{file}\"\n",
     "\n",
     "            for OC in [1.2, 1.5, 1.8, 2.0, 2.5]:\n",
-    "                for RM in [1.5]:\n",
-    "                    for GM in [0.8]:\n",
+    "                for RM in [0.75, 1.00, 1.50, 1.80, 2.00]:\n",
+    "                    for GM in [0.6, 0.7, 0.8, 0.9, 1.0]:\n",
     "                        for model in ['fixed','flex','partflex']:\n",
     "                            if model == 'partflex':\n",
     "                                for max_n_shift in range(2,5):\n",
