updated organization for optimal workforce size. still need to write code for efficient optimal workforce sizing algorithms.

--- a/run_code/optimal_workforce_size.ipynb
+++ b/run_code/optimal_workforce_size.ipynb
@@ -1,10 +1,59 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 42,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Optimal Workforce Size\n",
+    "\n",
+    "## by Clarice Mottet\n",
+    "\n",
+    "0. **[Part 0: Set Up](#part0)**\n",
+    "- **Objective**: Initialize programming environment.\n",
+    "- **Tasks:***\n",
+    "    - Set up libraries\n",
+    "    - Create functions to be used throughout notebook\n",
+    "    - Initialize run specific global variables\n",
+    "\n",
+    "1. **[Part 1: Method - Thesis](#part1)**\n",
+    "- **Objective**: Find the optimal workforce size for region 0 and expand to other regions\n",
+    "- **Tasks:***\n",
+    "    - \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a id='part0'>Part 0: Set Up</a>\n",
+    "- **Objective**: Initialize programming environment.\n",
+    "- **Tasks:**\n",
+    "    - Set up libraries\n",
+    "    - Functions to be used throughout notebook\n",
+    "    - Initialize run specific global variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Set up libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/clarice/.local/lib/python3.10/site-packages/matplotlib/projections/__init__.py:63: UserWarning: Unable to import Axes3D. This may be due to multiple versions of Matplotlib being installed (e.g. as a system package and as a pip package). As a result, the 3D projection is not available.\n",
+      "  warnings.warn(\"Unable to import Axes3D. This may be due to multiple versions of \"\n"
+     ]
+    }
+   ],
    "source": [
     "from glob import glob\n",
     "from os import path\n",
@@ -24,141 +73,128 @@
     "import sys\n",
     "sys.path.append('../solver')\n",
     "# from solver_output import practice_print\n",
-    "from solver_rostering import run_roster_solver_objval"
+    "from solver_rostering import run_objval"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'var1': 1.0}\n",
+      "{'var1': [1.0]}\n"
+     ]
+    }
+   ],
    "source": [
-    "# # for checking out good test options for different optimal workforce size methods\n",
+    "dict_ = {}\n",
+    "dict_['var1'] = 1.0\n",
     "\n",
-    "# df_output = pd.read_excel(r'../run_code/df_shifts_example.xlsx')\n",
+    "print(dict_)\n",
     "\n",
-    "# df_output = df_output[df_output['city']=='lyon']\n",
-    "# df_output = df_output[df_output['demand_type']=='doublepeak']\n",
+    "key = 'var1'\n",
+    "dict_[key] = [dict_[key]]\n",
     "\n",
-    "# df_output.sort_values(by = ['city','demand_baseline','demand_type','outsourcing_cost_multiplier','regional_multiplier','global_multiplier','model','max_n_shifts','region'], inplace = True)\n",
-    "# df_output.to_excel(r'../run_code/df_shifts_example_lyon.xlsx', index = False)\n"
+    "print(dict_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Functions to be used throughout notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #create population \"database\"\n",
+    "#Functions\n",
     "\n",
-    "# list_city_dt = []\n",
+    "#create the optimal workforce size \"databases\" by schedule, method (different folders)\n",
     "\n",
-    "# for file_in in os.listdir(r'../instances'):\n",
-    "#     base_file = splitext(basename(file_in))[0]\n",
-    "#     base_file_split = base_file.split('_')\n",
-    "#     file = base_file_split[0]+'_'+base_file_split[1]\n",
-    "#     list_city_dt.append(file)\n",
+    "def create_workforce_database(schedule, weekday_demand, weekend_demand):\n",
     "\n",
-    "# list_city_dt = list(set(list_city_dt))\n",
-    "# list_city_dt.sort()\n",
+    "    #load all shift information\n",
+    "    list_output = []\n",
     "\n",
-    "# dict_pop = {'instance_file_base':[],'city':[],'region':[],'population':[]}\n",
+    "    for filename in os.listdir(r'../shifts'):\n",
+    "        if filename.find('json')>-1:\n",
+    "            with open(f'../shifts/{filename}', 'r') as file:\n",
+    "                data = json.load(file)\n",
+    "                df_ = pd.DataFrame(data)\n",
+    "                list_output.append(df_)\n",
     "\n",
-    "# for base_file in list_city_dt:\n",
+    "    df_output = pd.concat(list_output, ignore_index = True)\n",
     "\n",
-    "#     city_pattern = r'(\\w+)_db'\n",
-    "#     db_pattern = r'db=(\\d+\\.\\d+)'\n",
+    "    #subset to where where shifts align with schedule demand and join into one dataframe\n",
+    "    df_uni = df_output[df_output['demand_type']==weekend_demand].copy().fillna(0)\n",
+    "    df_dp = df_output[df_output['demand_type']==weekday_demand].copy().fillna(0)\n",
+    "    keep_vars = ['city', 'demand_baseline', 'model',\n",
+    "        'max_n_shifts', 'outsourcing_cost_multiplier', 'regional_multiplier',\n",
+    "        'global_multiplier','region',\n",
+    "        'shifts_start']\n",
+    "    df_uni = df_uni[keep_vars]\n",
+    "    df_dp = df_dp[keep_vars]\n",
+    "    df_uni.rename(columns = {'shifts_start':'shifts_start_weekend'}, inplace = True)\n",
+    "    df_dp.rename(columns = {'shifts_start':'shifts_start_weekday'}, inplace = True)\n",
     "\n",
-    "#     city_match = re.search(city_pattern, base_file)\n",
-    "#     db_match = re.search(db_pattern, base_file)\n",
+    "    join_vars = ['city', 'demand_baseline', 'outsourcing_cost_multiplier', 'regional_multiplier',\n",
+    "        'global_multiplier', 'model',\n",
+    "        'max_n_shifts', 'region']\n",
     "\n",
-    "#     city = city_match.group(1) if city_match else None\n",
-    "#     demand_baseline = float(db_match.group(1)) if db_match else None\n",
+    "    df_out = df_uni.merge(df_dp, how = 'left', on = join_vars)\n",
+    "    df_out.loc[df_out['model']== 'fixed', 'max_n_shifts'] = np.NaN\n",
+    "    df_out.loc[df_out['model']== 'flex', 'max_n_shifts'] = np.NaN\n",
     "\n",
-    "#     if demand_baseline == 0.5:\n",
+    "    #merge with population information by city, region\n",
+    "    df_pop = pd.read_excel(f\"../workforce_size/population.xlsx\")\n",
+    "    df_out = df_out.merge(df_pop, how = 'left', on = ['city','region'])\n",
     "\n",
-    "#         #create inputs to run a trial workforce size\n",
-    "#         weekday_ = f'{base_file}_dt=doublepeak.json'\n",
+    "    df_out = df_out[['city', 'demand_baseline', 'model',\n",
+    "        'max_n_shifts', 'outsourcing_cost_multiplier', 'regional_multiplier',\n",
+    "        'global_multiplier','region','population','shifts_start_weekday','shifts_start_weekend']]\n",
     "\n",
-    "#         instance_file_weekday = f\"../instances/{weekday_}\"\n",
-    "\n",
-    "#         with open(instance_file_weekday) as f:\n",
-    "#             data_weekday = json.load(f)\n",
-    "\n",
-    "#         regions_weekday = [(region['id'],region['population']) for region in data_weekday['geography']['city']['regions']]\n",
-    "\n",
-    "#         for comb in regions_weekday:\n",
-    "#             dict_pop['instance_file_base'].append(base_file)\n",
-    "#             dict_pop['city'].append(city)\n",
-    "#             dict_pop['region'].append(comb[0])\n",
-    "#             dict_pop['population'].append(comb[1])\n",
-    "\n",
-    "# pop_out = f\"../workforce_size/population.json\"\n",
-    "# with open(pop_out, 'w') as f:\n",
-    "#     json.dump(dict_pop, f, indent=2)\n",
-    "\n",
-    "# df_pop = pd.DataFrame(dict_pop)\n",
-    "# df_pop.sort_values(by = ['city','population'], inplace = True)\n",
-    "# df_pop.to_excel(f\"../workforce_size/population.xlsx\", index = False)\n"
+    "    #add in variables to be filled by optimal workforce size algorithm\n",
+    "    df_out.sort_values(by = join_vars, inplace = True)\n",
+    "    df_out['workforce_size'] = 0\n",
+    "    start_time = time.time()\n",
+    "    datetime_format = datetime.fromtimestamp(start_time)\n",
+    "    df_out['date'] = datetime_format\n",
+    "    df_out['obj_val_prev'] = 0.0\n",
+    "    df_out['obj_val'] = 0.0\n",
+    "    df_out['obj_val_next'] = 0.0\n",
+    "    for method in ['method_region0','method_smallest_region_by_shifts','method_all_regions']:\n",
+    "        df_out.to_excel(f'../workforce_size/{schedule}/{method}.xlsx',index = False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Initialize run specific global variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #create the optimal workforce size \"databases\" by method (different folders)\n",
+    "#Run Parameters\n",
     "\n",
-    "# list_output = []\n",
+    "schedule = 'schedule_thesis'\n",
+    "weekday_demand = 'doublepeak'\n",
+    "weekend_demand = 'uniform'\n",
     "\n",
-    "# for filename in os.listdir(r'../shifts'):\n",
-    "#     if filename.find('json')>-1:\n",
-    "#         with open(f'../shifts/{filename}', 'r') as file:\n",
-    "#             data = json.load(file)\n",
-    "#             df_ = pd.DataFrame(data)\n",
-    "#             list_output.append(df_)\n",
-    "\n",
-    "# df_output = pd.concat(list_output, ignore_index = True)\n",
-    "\n",
-    "# df_uni = df_output[df_output['demand_type']=='uniform'].copy().fillna(0)\n",
-    "# df_dp = df_output[df_output['demand_type']=='doublepeak'].copy().fillna(0)\n",
-    "# keep_vars = ['city', 'demand_baseline', 'model',\n",
-    "#        'max_n_shifts', 'outsourcing_cost_multiplier', 'regional_multiplier',\n",
-    "#        'global_multiplier','region',\n",
-    "#        'shifts_start']\n",
-    "# df_uni = df_uni[keep_vars]\n",
-    "# df_dp = df_dp[keep_vars]\n",
-    "# df_uni.rename(columns = {'shifts_start':'shifts_start_uniform'}, inplace = True)\n",
-    "# df_dp.rename(columns = {'shifts_start':'shifts_start_doublepeak'}, inplace = True)\n",
-    "\n",
-    "# join_vars = ['city', 'demand_baseline', 'outsourcing_cost_multiplier', 'regional_multiplier',\n",
-    "#        'global_multiplier', 'model',\n",
-    "#        'max_n_shifts', 'region']\n",
-    "\n",
-    "# df_out = df_uni.merge(df_dp, how = 'left', on = join_vars)\n",
-    "# df_out.loc[df_out['model']== 'fixed', 'max_n_shifts'] = np.NaN\n",
-    "# df_out.loc[df_out['model']== 'flex', 'max_n_shifts'] = np.NaN\n",
-    "\n",
-    "# df_pop = pd.read_excel(f\"../workforce_size/population.xlsx\")\n",
-    "# df_out = df_out.merge(df_pop, how = 'left', on = ['city','region'])\n",
-    "\n",
-    "# df_out = df_out[['city', 'demand_baseline', 'model',\n",
-    "#        'max_n_shifts', 'outsourcing_cost_multiplier', 'regional_multiplier',\n",
-    "#        'global_multiplier','region','population','shifts_start_uniform','shifts_start_doublepeak']]\n",
-    "\n",
-    "# df_out.sort_values(by = join_vars, inplace = True)\n",
-    "# df_out['workforce_size'] = 0\n",
-    "# start_time = time.time()\n",
-    "# datetime_format = datetime.fromtimestamp(start_time)\n",
-    "# df_out['date'] = datetime_format\n",
-    "# df_out['obj_val_prev'] = 0.0\n",
-    "# df_out['obj_val'] = 0.0\n",
-    "# df_out['obj_val_next'] = 0.0\n",
-    "# # df_out.to_excel(r'../workforce_size/check_base.xlsx', index = False)\n",
-    "# for method in ['method_region0','method_smallest_region_by_shifts','method_all_regions']:\n",
-    "#     df_out.to_excel(f'../workforce_size/{method}/weekday_uniform_weekend_doublepeak.xlsx',index = False)\n"
+    "# create_workforce_database(schedule, weekday_demand, weekend_demand)"
    ]
   },
   {
