wrote up outline for the three optimal workforce sizing algorithms. The only other level of efficiency I could add to the outline is determining a start size that isn't 1?

--- a/run_code/optimal_workforce_size.ipynb
+++ b/run_code/optimal_workforce_size.ipynb
@@ -205,6 +205,67 @@
    "source": [
     "#now need to program the three different methods for workforce sizing\n",
     "\n",
+    "\n",
+    "#-----------------\n",
+    "#current\n",
+    "#read in database\n",
+    "#create copy of database that is a \"run database\"\n",
+    "#subset \"run database\" to only region 0\n",
+    "#remove duplicates in \"run database\" by (city, OC, RM, GM, shift_starts_weekday, shift_starts_weekend)\n",
+    "#create new column log indicator that is 0\n",
+    "#merge \"run database\" back onto database including the log indicator (but make it a run indicator = 1)\n",
+    "#for loop over (model, max_n_shifts)\n",
+    "#if combo exists in database by (model, max_n_shifts) for the (city, OC, RM, GM, shift_starts_weekday, shift_starts_weekend)\n",
+    "    #check to see if the log indicator is 0\n",
+    "        #always assume region 0 (everything else is 1)\n",
+    "        #run optimal workforce size and fill in details in the database read in\n",
+    "        #log indicator is 1\n",
+    "\n",
+    "#do a group by (city, OC, RM, GM, shift_starts_weekday, shift_starts_weekend, run indicator) and find max optimal workforce size\n",
+    "#if there are any zeros where run indicator = 1, fill in the with max optimal workforce size (this accounts for same schedule given differing models)\n",
+    "#expand optimal workforce size to other regions\n",
+    "#export database\n",
+    "\n",
+    "#-----------------\n",
+    "#smallest region and distinct shift start and end\n",
+    "#read in database\n",
+    "#create copy of database that is a \"run database\"\n",
+    "#sort \"run database\" by population\n",
+    "#remove duplicates in \"run database\" by (city, OC, RM, GM, shift_starts_weekday, shift_starts_weekend)\n",
+    "#create new column log indicator that is 0\n",
+    "#merge \"run database\" back onto database including the log indicator (but make it a run indicator = 1)\n",
+    "#for loop over (model, max_n_shifts)\n",
+    "#if combo exists in database by (model, max_n_shifts) for the (city, OC, RM, GM, shift_starts_weekday, shift_starts_weekend)\n",
+    "    #check to see if the log indicator is 0\n",
+    "        #need to determine what region and every other region workforce size is 1\n",
+    "        #run optimal workforce size for that specific region and fill in details in the database read in\n",
+    "        #log indicator is 1\n",
+    "\n",
+    "#do a group by (city, OC, RM, GM, shift_starts_weekday, shift_starts_weekend, run indicator) and find max optimal workforce size\n",
+    "#if there are any zeros where run indicator = 1, fill in the with max optimal workforce size (this accounts for same schedule given differing models)\n",
+    "#expand optimal workforce size to other regions\n",
+    "#export database\n",
+    "\n",
+    "#-----------------\n",
+    "#optimal workforce size individually\n",
+    "#read in database\n",
+    "#create copy of database that is a \"run database\"\n",
+    "#sort \"run database\" by population\n",
+    "#remove duplicates in \"run database\" by (city, region, OC, RM, GM, shift_starts_weekday, shift_starts_weekend)\n",
+    "#create new column log indicator that is 0\n",
+    "#merge \"run database\" back onto database including the log indicator (but make it a run indicator = 1)\n",
+    "#for loop over (model, max_n_shifts)\n",
+    "#if combo exists in database by (model, max_n_shifts) for the (city, region, OC, RM, GM, shift_starts_weekday, shift_starts_weekend)\n",
+    "    #check to see if the log indicator is 0\n",
+    "        #need to determine what region and every other region workforce size is 1\n",
+    "        #run optimal workforce size for that specific region and fill in details in the database read in\n",
+    "        #log indicator is 1\n",
+    "\n",
+    "#do a group by (city, region, OC, RM, GM, shift_starts_weekday, shift_starts_weekend, run indicator) and find max optimal workforce size\n",
+    "#if there are any zeros where run indicator = 1, fill in the with max optimal workforce size (this accounts for same schedule given differing models)\n",
+    "\n",
+    "\n",
+    "\n",
     "#current region0\n",
     "#smallest region and distinct shift start and end\n",
     "#optimal workforce size individually\n",
